--- a/power/src/app/fragebogen/editor/conditions/conditions.component.html
+++ b/power/src/app/fragebogen/editor/conditions/conditions.component.html
@@ -1,7 +1,8 @@
 <div *ngFor="let item of struct; index as i">
     <div class="form-row m-0 mb-2">
         <div class="form-group col-2 m-0 pl-0">
-            <label for="conditionCondition{{ i }}" class="sr-only">Verknüpfung*</label>
+            <label for="conditionCondition{{ i }}"
+                   class="sr-only">Verknüpfung*</label>
             <select class="custom-select"
                     [(ngModel)]="item.condition"
                     (change)="modelChanged($event)"
@@ -16,7 +17,8 @@
         </div>
 
         <div class="form-group col-4 m-0">
-            <label for="conditionQuestion{{ i }}" class="sr-only">Formularfeld*</label>
+            <label for="conditionQuestion{{ i }}"
+                   class="sr-only">Formularfeld*</label>
             <select class="custom-select"
                     [(ngModel)]="item.question"
                     (change)="modelChanged($event)"
@@ -24,7 +26,8 @@
                     id="conditionQuestion{{ i }}"
                     name="conditionQuestion{{ i }}"
                     required>
-                <option value="" disabled>Formularfeld auswählen</option>
+                <option value=""
+                        disabled>Formularfeld auswählen</option>
                 <option *ngFor="let question of questions; index as j"
                         value="{{ question.name }}">
                     {{ question.title }}
@@ -37,7 +40,8 @@
         </div>
 
         <div class="form-group col-2 m-0">
-            <label for="conditionOperator{{ i }}" class="sr-only">Operator*</label>
+            <label for="conditionOperator{{ i }}"
+                   class="sr-only">Operator*</label>
             <select class="custom-select"
                     [(ngModel)]="item.operator"
                     (change)="switchValueType($event, i); modelChanged($event)"
@@ -55,13 +59,17 @@
                 <option value="less">&lt;</option>
                 <option value="greaterorequal">&gt;=</option>
                 <option value="lessorequal">&lt;=</option>
-                <option value="anyof" *ngIf="item.choices">Enthält mindestens eines</option>
-                <option value="allof" *ngIf="item.choices">Enthält alle</option>
+                <option value="anyof"
+                        *ngIf="item.choices">Enthält mindestens eines</option>
+                <option value="allof"
+                        *ngIf="item.choices">Enthält alle</option>
             </select>
         </div>
 
-        <div class="form-group col-4 m-0 pr-0" *ngIf="!(item.operator === 'empty' || item.operator === 'notempty')">
-            <label for="conditionValue{{ i }}" class="sr-only">Wert oder Variabel %7Be1%7D</label>
+        <div class="form-group col-4 m-0 pr-0"
+             *ngIf="!(item.operator === 'empty' || item.operator === 'notempty')">
+            <label for="conditionValue{{ i }}"
+                   class="sr-only">Wert oder Variabel %7Be1%7D</label>
             <input type="text"
                    class="form-control"
                    [(ngModel)]="item.value"
@@ -93,12 +101,20 @@
 </div>
 
 <div class="mb-2">
-    <button type="button" class="btn btn-danger btn-sm mr-2" title="Bedingung entfernen" (click)="ConditionDel()">
-        <i class="fas fa-minus fa-fw" aria-hidden="true"></i>
+    <button type="button"
+            class="btn btn-danger btn-sm mr-2"
+            title="Bedingung entfernen"
+            (click)="ConditionDel()">
+        <i class="fas fa-minus fa-fw"
+           aria-hidden="true"></i>
         <span class="sr-only">Bedingung entfernen</span>
     </button>
-    <button type="button" class="btn btn-success btn-sm" title="Bedingung hinzufügen" (click)="ConditionAdd()">
-        <i class="fas fa-plus fa-fw" aria-hidden="true"></i>
+    <button type="button"
+            class="btn btn-success btn-sm"
+            title="Bedingung hinzufügen"
+            (click)="ConditionAdd()">
+        <i class="fas fa-plus fa-fw"
+           aria-hidden="true"></i>
         <span class="sr-only">Bedingung hinzufügen</span>
     </button>
 </div>
