--- a/power/src/app/fragebogen/editor/modal-formular/modal-formular.component.html
+++ b/power/src/app/fragebogen/editor/modal-formular/modal-formular.component.html
@@ -1,5 +1,11 @@
-<div bsModal #modalformular="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
+<div bsModal
+     #modalformular="bs-modal"
+     class="modal fade"
+     tabindex="-1"
+     role="dialog"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg"
+         role="document">
         <div class="modal-content">
             <div class="modal-header pb-0">
                 <!-- modal navigation tabs -->
@@ -12,7 +18,8 @@
                             Formular
                         </a>
                     </li>
-                    <li *ngFor="let page of storage.model.pages; index as i" class="nav-item clickable">
+                    <li *ngFor="let page of storage.model.pages; index as i"
+                        class="nav-item clickable">
                         <a class="nav-link"
                            (click)="SelectTab(i + 1)"
                            title="Seite {{ i + 1 }} konfigurieren"
@@ -24,8 +31,12 @@
                 </ul>
 
                 <!-- modal close button -->
-                <button type="button" class="close" title="Änderungen verwerfen" data-dismiss="modal"
-                        aria-label="Änderungen verwerfen" (click)="Close()">
+                <button type="button"
+                        class="close"
+                        title="Änderungen verwerfen"
+                        data-dismiss="modal"
+                        aria-label="Änderungen verwerfen"
+                        (click)="Close()">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -33,7 +44,8 @@
             <div class="modal-body">
                 <!-- modal main tab -->
                 <div *ngIf="tabSelected === 0">
-                    <form #configformular="ngForm" onsubmit="return false;">
+                    <form #configformular="ngForm"
+                          onsubmit="return false;">
                         <div class="form-group">
                             <label for="configFormularTitle">Formular Titel*</label>
                             <input type="text"
@@ -54,7 +66,8 @@
                                       rows="5"
                                       maxlength="5000">
                             </textarea>
-                            <small id="configFormularDescriptionHelp" class="form-text text-muted">Dieser Text wird oben
+                            <small id="configFormularDescriptionHelp"
+                                   class="form-text text-muted">Dieser Text wird oben
                                 auf jeder Seite vom Formular angezeigt.</small>
                         </div>
                         <div class="form-group">
@@ -69,7 +82,8 @@
                                       aria-describedby="configFormularEndtextHelp"
                                       required>
                             </textarea>
-                            <small id="configFormularEndtextHelp" class="form-text text-muted">Der Text wird nach
+                            <small id="configFormularEndtextHelp"
+                                   class="form-text text-muted">Der Text wird nach
                                 abschluss des Formulars angezeigt.</small>
                         </div>
                     </form>
@@ -77,7 +91,9 @@
 
                 <!-- modal pages tabs -->
                 <div *ngFor="let page of storage.model.pages; index as i">
-                    <form #configpages="ngForm" *ngIf="tabSelected === i + 1" onsubmit="return false;">
+                    <form #configpages="ngForm"
+                          *ngIf="tabSelected === i + 1"
+                          onsubmit="return false;">
                         <!--<div class="form-group">
                             <label for="configPageName">Seiten Kennung</label>
                             <input type="text"
@@ -126,18 +142,24 @@
                         <hr>
                         Sichtbarkeitsbedingung
                         <br>
-                        <power-formulars-editor-conditions
-                            [(data)]="storage.model.pages[i].visibleIf"></power-formulars-editor-conditions>
+                        <power-formulars-editor-conditions [(data)]="storage.model.pages[i].visibleIf">
+                        </power-formulars-editor-conditions>
                     </form>
                 </div>
             </div>
 
             <!-- modal buttons -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" title="Änderungen verwerfen" (click)="Close()"
+                <button type="button"
+                        class="btn btn-danger"
+                        title="Änderungen verwerfen"
+                        (click)="Close()"
                         data-dismiss="modal">Verwerfen
                 </button>
-                <button type="button" class="btn btn-success" title="Änderungen speichern" (click)="Save()">Speichern
+                <button type="button"
+                        class="btn btn-success"
+                        title="Änderungen speichern"
+                        (click)="Save()">Speichern
                 </button>
             </div>
         </div>
