--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -1,7 +1,8 @@
 <div *ngFor="let item of struct; index as i">
     <div class="form-row m-0 mb-2">
         <div class="form-group col-3 m-0 pl-0">
-            <label for="validatorType{{ i }}" class="sr-only">Typ*</label>
+            <label for="validatorType{{ i }}"
+                   class="sr-only">Typ*</label>
             <select class="custom-select"
                     [(ngModel)]="item.type"
                     (change)="switchType($event, i); modelChanged($event)"
@@ -15,8 +16,10 @@
             </select>
         </div>
 
-        <div class="form-group col-4 m-0" *ngIf="item.type === 'numeric' || item.type === 'text'">
-            <label for="validatorMin{{ i }}" class="sr-only">Minimaler Wert/Länge*</label>
+        <div class="form-group col-4 m-0"
+             *ngIf="item.type === 'numeric' || item.type === 'text'">
+            <label for="validatorMin{{ i }}"
+                   class="sr-only">Minimaler Wert/Länge*</label>
             <input type="number"
                    class="form-control"
                    [(ngModel)]="item.min"
@@ -30,8 +33,10 @@
                    required>
         </div>
 
-        <div class="form-group col-4 m-0 pr-0" *ngIf="item.type === 'numeric' || item.type === 'text'">
-            <label for="validatorMax{{ i }}" class="sr-only">Maximaler Wert/Länge*</label>
+        <div class="form-group col-4 m-0 pr-0"
+             *ngIf="item.type === 'numeric' || item.type === 'text'">
+            <label for="validatorMax{{ i }}"
+                   class="sr-only">Maximaler Wert/Länge*</label>
             <input type="number"
                    class="form-control"
                    [(ngModel)]="item.max"
@@ -45,8 +50,10 @@
                    required>
         </div>
 
-        <div class="form-group col-9 m-0 pr-0" *ngIf="item.type === 'regex'">
-            <label for="validatorData{{ i }}" class="sr-only">Regulärerausdruck*</label>
+        <div class="form-group col-9 m-0 pr-0"
+             *ngIf="item.type === 'regex'">
+            <label for="validatorData{{ i }}"
+                   class="sr-only">Regulärerausdruck*</label>
             <input type="text"
                    class="form-control"
                    [(ngModel)]="item.regex"
@@ -59,8 +66,10 @@
                    required>
         </div>
 
-        <div class="form-group col-4 m-0" *ngIf="item.type === 'expression'">
-            <label for="validatorExpQuestion{{ i }}" class="sr-only">Formularfeld*</label>
+        <div class="form-group col-4 m-0"
+             *ngIf="item.type === 'expression'">
+            <label for="validatorExpQuestion{{ i }}"
+                   class="sr-only">Formularfeld*</label>
             <select class="custom-select"
                     [(ngModel)]="item.question"
                     (change)="modelChanged($event)"
@@ -68,7 +77,8 @@
                     id="validatorExpQuestion{{ i }}"
                     name="validatorExpQuestion{{ i }}"
                     required>
-                <option value="" disabled>Formularfeld auswählen</option>
+                <option value=""
+                        disabled>Formularfeld auswählen</option>
                 <option *ngFor="let question of questions; index as j"
                         value="{{ question.name }}">
                     {{ question.title }}
@@ -80,8 +90,10 @@
             </select>
         </div>
 
-        <div class="form-group col-2 m-0" *ngIf="item.type === 'expression'">
-            <label for="validatorExpOperator{{ i }}" class="sr-only">Operator*</label>
+        <div class="form-group col-2 m-0"
+             *ngIf="item.type === 'expression'">
+            <label for="validatorExpOperator{{ i }}"
+                   class="sr-only">Operator*</label>
             <select class="custom-select"
                     [(ngModel)]="item.operator"
                     (change)="switchValueType($event, i); modelChanged($event)"
@@ -99,14 +111,17 @@
                 <option value="less">&lt;</option>
                 <option value="greaterorequal">&gt;=</option>
                 <option value="lessorequal">&lt;=</option>
-                <option value="anyof" *ngIf="item.choices">Enthält mindestens eines</option>
-                <option value="allof" *ngIf="item.choices">Enthält alle</option>
+                <option value="anyof"
+                        *ngIf="item.choices">Enthält mindestens eines</option>
+                <option value="allof"
+                        *ngIf="item.choices">Enthält alle</option>
             </select>
         </div>
 
         <div class="form-group col-3 m-0 pr-0"
              *ngIf="item.type === 'expression' && !(item.operator === 'empty' || item.operator === 'notempty')">
-            <label for="validatorExpValue{{ i }}" class="sr-only">Wert oder Variabel %7Be1%7D</label>
+            <label for="validatorExpValue{{ i }}"
+                   class="sr-only">Wert oder Variabel %7Be1%7D</label>
             <input type="text"
                    class="form-control"
                    [(ngModel)]="item.value"
@@ -138,12 +153,20 @@
 </div>
 
 <div class="mb-2">
-    <button type="button" class="btn btn-danger btn-sm mr-2" title="Validator entfernen" (click)="ValidatorDel()">
-        <i class="fas fa-minus fa-fw" aria-hidden="true"></i>
+    <button type="button"
+            class="btn btn-danger btn-sm mr-2"
+            title="Validator entfernen"
+            (click)="ValidatorDel()">
+        <i class="fas fa-minus fa-fw"
+           aria-hidden="true"></i>
         <span class="sr-only">Validator entfernen</span>
     </button>
-    <button type="button" class="btn btn-success btn-sm" title="Validator hinzufügen" (click)="ValidatorAdd()">
-        <i class="fas fa-plus fa-fw" aria-hidden="true"></i>
+    <button type="button"
+            class="btn btn-success btn-sm"
+            title="Validator hinzufügen"
+            (click)="ValidatorAdd()">
+        <i class="fas fa-plus fa-fw"
+           aria-hidden="true"></i>
         <span class="sr-only">Validator hinzufügen</span>
     </button>
 </div>
@@ -151,13 +174,16 @@
 <hr>
 
 <div class="form-group row m-0 mb-3">
-    <label for="validatorDefault" class="col-12 col-lg-4 col-form-label px-0">Standard Validator hinzufügen</label>
+    <label for="validatorDefault"
+           class="col-12 col-lg-4 col-form-label px-0">Standard Validator hinzufügen</label>
     <div class="col-12 col-lg-8 p-0">
         <select class="custom-select"
                 (change)="selectDefaultValidator($event)"
                 name="validatorDefault"
                 required>
-            <option value="" selected disabled>Validator Auswählen</option>
+            <option value=""
+                    selected
+                    disabled>Validator Auswählen</option>
             <option value="date2">Datum (yyyy-mm-dd)</option>
             <option value="date1">Datum (dd.mm.yyyy)</option>
         </select>
